# ml-inference

./: .gitignore  README.md  requirements.txt
harness/: cleartext_impl.py  generate_dataset.py  generate_input.py  params.py  run_submission.py  utils.py
harness/cifar10/: cifar10.py  resnet20.py  test.py  train.py
harness/mnist/: mnist.py  test.py
measurements/medium/: results-1.json  results-2.json  results-3.json
measurements/single/: results-1.json  results-2.json  results-3.json
measurements/small/: results-1.json  results-2.json  results-3.json
scripts/: build_task.sh  get_openfhe.sh
submission/: CMakeLists.txt
submission/docs/: README.md  mlp.mlir
submission/include/: FHEONANNController.h  FHEONHEController.h  UtilsData.h  lenet5_fheon.h  mlp_encryption_utils.h  mlp_openfhe.h  params.h
submission/src/: client_decrypt_decode.cpp  client_encode_encrypt_input.cpp  client_key_generation.cpp  client_postprocess.cpp  lenet5_fheon.cpp  mlp_encryption_utils.cpp  server_encrypted_compute.cpp
submission/src/fheonsrc/: FHEONANNController.cpp  FHEONHEController.cpp
submission/weights/lenet5/: Conv1_bias.csv  Conv1_weight.csv  Conv2_bias.csv  Conv2_weight.csv  FC1_bias.csv  FC1_weight.csv  FC2_bias.csv  FC2_weight.csv  FC3_bias.csv  FC3_weight.csv
submission_remote/: client_decrypt_decode.py  client_encode_encrypt_input.py  client_key_generation.py  client_preprocess_input.py  get_fhe_params_from_be.py  requirements.txt  server_encrypted_compute.py  server_get_params.py  server_upload_ek.py  submission_utils.py
submission_remote/submission_params_and_model/: README.md  digits_recognizer.pth
submissions/common/src/: client_decrypt_decode.cpp  client_encode_encrypt_input.cpp  client_postprocess.cpp  client_preprocess_input.cpp  encryption_utils.cpp
submissions/docs/: README.md  mlp.mlir
submissions/fheon/: FHEONANNController.cpp  FHEONHEController.cpp
submissions/include/: encryption_utils.h  lenet5_fheon.h  mlp_fheon.h  mlp_openfhe.h  params.h  resnet20_fheon.h  utils.h
submissions/include/fheon/: FHEONANNController.h  FHEONHEController.h  Utils.h  UtilsData.h  UtilsImage.h
submissions/lenet5/: CMakeLists.txt
submissions/lenet5/src/: client_encode_encrypt_input.cpp  client_key_generation.cpp  lenet5_fheon.cpp  server_encrypted_compute.cpp
submissions/lenet5/weights/lenet5/: Conv1_bias.csv  Conv2_bias.csv  Conv2_weight.csv  FC1_weight.csv  FC2_bias.csv  FC2_weight.csv  FC3_bias.csv  FC3_weight.csv
submissions/mlp/: CMakeLists.txt
submissions/mlp/docs/: README.md  mlp.mlir
submissions/mlp/include/: mlp_encryption_utils.h  mlp_openfhe.h  params.h
submissions/mlp/src/: client_encode_encrypt_input.cpp  client_key_generation.cpp  client_preprocess_input.cpp  mlp_encryption_utils.cpp  mlp_openfhe.cpp  server_encrypted_compute.cpp
submissions/resnet20/: CMakeLists.txt
submissions/resnet20/src/: client_encode_encrypt_input.cpp  client_key_generation.cpp  resnet20_fheon.cpp  resnet20_fheonFull.cpp  server_encrypted_compute.cpp
submissions/resnet20/weights/resnet20/: layer0_conv1_bias.csv  layer0_conv1_weight.csv  layer1_block1_conv1_bias.csv  layer1_block1_conv1_weight.csv  layer1_block1_conv2_bias.csv  layer1_block1_conv2_weight.csv  layer1_block2_conv1_bias.csv  layer1_block2_conv1_weight.csv  layer1_block2_conv2_bias.csv  layer1_block2_conv2_weight.csv  layer1_block3_conv1_bias.csv  layer1_block3_conv1_weight.csv  layer1_block3_conv2_bias.csv  layer1_block3_conv2_weight.csv  layer2_block1_conv1_bias.csv  layer2_block1_conv1_weight.csv  layer2_block1_conv2_bias.csv  layer2_block1_conv2_weight.csv  layer2_block1_shortcut_bias.csv  layer2_block1_shortcut_weight.csv  layer2_block2_conv1_bias.csv  layer2_block2_conv1_weight.csv  layer2_block2_conv2_bias.csv  layer2_block2_conv2_weight.csv  layer2_block3_conv1_bias.csv  layer2_block3_conv1_weight.csv  layer2_block3_conv2_bias.csv  layer2_block3_conv2_weight.csv  layer3_block1_conv1_bias.csv  layer3_block1_conv1_weight.csv  layer3_block1_conv2_bias.csv  layer3_block1_conv2_weight.csv  layer3_block1_shortcut_bias.csv  layer3_block1_shortcut_weight.csv  layer3_block2_conv1_bias.csv  layer3_block2_conv1_weight.csv  layer3_block2_conv2_bias.csv  layer3_block2_conv2_weight.csv  layer3_block3_conv1_bias.csv  layer3_block3_conv1_weight.csv  (+4 more)
